--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^2.9.0",
+    "@dreygur/react-crypto-chart": "^0.0.10",
     "@expo/vector-icons": "^14.0.2",
     "@neondatabase/serverless": "^0.10.4",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/drawer": "^7.3.3",
+    "@react-navigation/native": "^7.1.0",
+    "@react-navigation/native-stack": "^7.3.4",
+    "@react-navigation/stack": "^7.2.4",
+    "@tanstack/react-query": "^5.71.3",
+    "@tanstack/react-query-persist-client": "^5.71.3",
     "axios": "^1.8.4",
     "expo": "~52.0.39",
     "expo-blur": "~14.0.3",
@@ -37,6 +43,7 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "lottie-react-native": "^7.2.2",
     "moment": "^2.30.1",
     "mongodb": "^6.15.0",
     "mongoose": "^8.12.1",
