--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "crypto",
+    "name": "Titans Crypto",
     "slug": "crypto",
     "version": "1.0.0",
     "orientation": "portrait",
