--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@clerk/clerk-expo": "^2.9.0",
     "@dreygur/react-crypto-chart": "^0.0.10",
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.0.4",
     "@neondatabase/serverless": "^0.10.4",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
@@ -27,6 +27,7 @@
     "@react-navigation/stack": "^7.2.4",
     "@tanstack/react-query": "^5.71.3",
     "@tanstack/react-query-persist-client": "^5.71.3",
+    "@types/react-native": "^0.72.8",
     "axios": "^1.8.4",
     "expo": "~52.0.39",
     "expo-blur": "~14.0.3",
@@ -54,6 +55,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-crop-picker": "^0.42.0",
     "react-native-image-picker": "^8.2.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
@@ -62,13 +64,15 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "tailwindcss": "^3.4.17",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "expo-linear-gradient": "~14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
+    "expo-module-scripts": "^4.0.4",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
