--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": false,
+    "noEmit": true,
+    "strict": true,
     "paths": {
       "@/*": [
         "./*"
