--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tanstack/react-query-persist-client": "^5.71.3",
     "@types/react-native": "^0.72.8",
     "axios": "^1.8.4",
+    "dotenv": "^16.5.0",
     "expo": "~52.0.39",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
@@ -53,6 +54,8 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-crop-picker": "^0.42.0",
     "react-native-image-picker": "^8.2.0",
@@ -60,6 +63,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg-uri": "^1.2.3",
     "react-native-swiper": "^1.6.0",
     "react-native-uuid": "^2.0.3",
     "react-native-wagmi-charts": "^2.6.0",
