--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
     "@neondatabase/serverless": "^0.10.4",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/drawer": "^7.3.3",
-    "@react-navigation/native": "^7.1.0",
-    "@react-navigation/native-stack": "^7.3.4",
+    "@react-navigation/drawer": "^7.1.1",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.2.4",
     "@tanstack/react-query": "^5.71.3",
     "@tanstack/react-query-persist-client": "^5.71.3",
     "@types/react-native": "^0.72.8",
     "axios": "^1.8.4",
     "dotenv": "^16.5.0",
-    "expo": "~52.0.39",
+    "expo": "^53.0.9",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
     "expo-document-picker": "~13.0.3",
@@ -39,21 +39,21 @@
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.19",
+    "expo-router": "~4.0.21",
     "expo-secure-store": "^14.0.1",
-    "expo-splash-screen": "~0.29.22",
+    "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
-    "lottie-react-native": "^7.2.2",
+    "lottie-react-native": "7.1.0",
     "moment": "^2.30.1",
     "mongodb": "^6.15.0",
     "mongoose": "^8.12.1",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
     "react-native-dotenv": "^3.4.11",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
@@ -61,7 +61,7 @@
     "react-native-image-picker": "^8.2.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg-uri": "^1.2.3",
     "react-native-swiper": "^1.6.0",
